--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,10 +1,18 @@
-FROM amazonlinux:2
+version: 0.2
 
-RUN yum update -y && \
-yum install -y java-21-amazon-corretto-devel && \
-yum install -y gradle
-
-WORKDIR /app
-COPY . .
-
-CMD ["./gradlew", "build"]
+phases:
+  install:
+    runtime-versions:
+      java: corretto-21
+    commands:
+      - echo Instalar dependências
+      - yum update -y
+      - yum install -y java-21-amazon-corretto-devel
+      - chmod +x ./gradlew  # Adiciona permissão de execução ao gradlew
+  build:
+    commands:
+      - echo Compilando o projeto
+      - ./gradlew clean build
+artifacts:
+  files:
+    - build/libs/**/*.jar
