--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,10 @@ jacoco {
 	toolVersion = "0.8.10"
 }
 
+tasks.withType(JavaCompile) {
+	options.compilerArgs << "-Xlint:unchecked"
+}
+
 jacocoTestReport {
 	afterEvaluate {
 		classDirectories.setFrom(files(classDirectories.files.collect {
