--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      java: corretto-21
+      java: corretto21
     commands:
       - echo Instalar dependências
       - chmod +x ./gradlew  # Adiciona permissão de execução ao gradlew
@@ -11,6 +11,17 @@ phases:
     commands:
       - echo Compilando o projeto
       - ./gradlew clean build
+  post_build:
+    commands:
+      - echo "Executando testes"
+      - ./gradlew test jacocoTestReport jacocoTestCoverageVerification
 artifacts:
   files:
     - build/libs/**/*.jar
+reports:
+  junit:
+    files:
+      - build/test-results/test/*.xml
+  cobertura:
+    files:
+      - build/reports/jacoco/test/*.xml
