--- a/buildspec.yml
+++ b/buildspec.yml
@@ -22,8 +22,8 @@ reports:
   junit:
     files:
       - '**/build/test-results/test/*.xml'
-    base-directory: build/test-results/test
+    base-directory: .
   cobertura:
     files:
       - '**/build/reports/jacoco/test/*.xml'
-    base-directory: build/reports/jacoco/test
+    base-directory: .
